--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,10 +4,10 @@ jobs:
   dependencies:
     runs-on: ubuntu-latest
     steps:
-      - name: dependencies
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
-      - run: npm i
+      - name: dependencies
+        run: npm i
 
     
       
