--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,29 @@ jobs:
       - uses: actions/setup-node@v4
       - name: dependencies
         run: npm i
-
+  build:
+    runs-on: ubuntu-latest
+    needs: dependencies
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+      - name: build
+        run: npm run build
+  linters:
+    runs-on: ubuntu-latest
+    needs: dependencies
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+      - name: linters
+        run: npm run linters
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [dependencies, build]
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+      - name: deploy
+        run: npm run deploy
     
       
