--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,8 +6,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
-      - name: dependencies
-        run: npm i
+        with:
+          cache: 'yarn'
+      - name: Install project dependencies
+        run: yarn
   build:
     runs-on: ubuntu-latest
     needs: dependencies
@@ -15,7 +17,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
       - name: build
-        run: npm run build
+        run: yarn build
   linters:
     runs-on: ubuntu-latest
     needs: dependencies
@@ -23,7 +25,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
       - name: linters
-        run: npm run linters
+        run: yarn linters
   deploy:
     runs-on: ubuntu-latest
     needs: [dependencies, build]
@@ -31,6 +33,6 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
       - name: deploy
-        run: npm run deploy
+        run: yarn deploy
     
       
