--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,13 +9,15 @@ jobs:
         with:
           cache: 'yarn'
       - name: Install project dependencies
-        run: yarn install
+        run: yarn install --immutable
   build:
     runs-on: ubuntu-latest
     needs: dependencies
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
+        with:
+          cache: 'yarn'
       - name: build
         run: yarn build
   linters:
@@ -24,6 +26,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
+        with:
+          cache: 'yarn'
       - name: linters
         run: yarn linters
   deploy:
@@ -32,6 +36,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
+        with:
+          cache: 'yarn'
       - name: deploy
         run: yarn deploy
     
