--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,8 @@ jobs:
         with:
           path: ~/.cache/yarn
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}          
-
+      - name: Install project dependencies
+        run: yarn install 
       - name: build
         run: yarn build
   linters:
@@ -56,7 +57,8 @@ jobs:
         with:
           path: ~/.cache/yarn
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}            
-
+      - name: Install project dependencies
+        run: yarn install 
       - name: linters
         run: yarn linters
   deploy:
@@ -75,7 +77,8 @@ jobs:
         with:
           path: ~/.cache/yarn
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}           
-
+      - name: Install project dependencies
+        run: yarn install 
       - name: deploy
         run: yarn deploy
     
