--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,12 +13,14 @@ jobs:
           check-latest: true
           cache: 'yarn'
       - name: Cache Yarn dependencies
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: ~/.cache/yarn
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-      
+      - name: Debug cache content
+        run: ls -la ~/.cache/yarn
       - name: Install project dependencies
         run: yarn install 
   build:
@@ -37,6 +39,8 @@ jobs:
         with:
           path: ~/.cache/yarn
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}          
+      - name: Debug cache content
+        run: ls -la ~/.cache/yarn
       - name: Install project dependencies
         run: yarn install 
       - name: build
@@ -56,7 +60,9 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ~/.cache/yarn
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}            
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}    
+      - name: Debug cache content
+        run: ls -la ~/.cache/yarn          
       - name: Install project dependencies
         run: yarn install 
       - name: linters
@@ -77,6 +83,8 @@ jobs:
         with:
           path: ~/.cache/yarn
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}           
+      - name: Debug cache content
+        run: ls -la ~/.cache/yarn          
       - name: Install project dependencies
         run: yarn install 
       - name: deploy
